--- a/index.html
+++ b/index.html
@@ -2,67 +2,55 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-
-    <link rel="stylesheet"   href="css/main.css">
-
+    <link rel="stylesheet" href="css/main.css">
     <title>photobox</title>
 </head>
 <body>
 
 <nav>
-
     <button id="load_gallery">load</button>
-
     <button id="previous">prev page</button>
     <button id="next">next page</button>
-
-
 </nav>
 
 <main id="gallery">
+    <div class="gallery-container" id="photobox-gallery">
+        <div class="vignette">
+            <img
+                    data-img="https://webetu.iutnc.univ-lorraine.fr/www/canals5/photobox/img/large/img_586d38dc3123d.jpg"
+                    data-uri="https://webetu.iutnc.univ-lorraine.fr/www/canals5/photobox/photos/100"
+                    src="https://webetu.iutnc.univ-lorraine.fr/www/canals5/photobox/img/small/img_586d38dc3123d.jpg">
+            <div>water-lily-1893220_1920</div>
+        </div>
 
+        <div class="vignette">
+            <img data-img="https://webetu.iutnc.univ-lorraine.fr/www/canals5/photobox/img/large/img_586d38dbc84ac.jpg"
+                 data-uri="https://webetu.iutnc.univ-lorraine.fr/www/canals5/photobox/photos/101"
+                 src="https://webetu.iutnc.univ-lorraine.fr/www/canals5/photobox/img/small/img_586d38dbc84ac.jpg">
+            <div>water-1910237_1920</div>
+        </div>
 
-   <div class="gallery-container" id="photobox-gallery">
+        <div class="vignette">
+            <img data-img="https://webetu.iutnc.univ-lorraine.fr/www/canals5/photobox/img/large/img_586d38db67677.jpg"
+                 data-uri="https://webetu.iutnc.univ-lorraine.fr/www/canals5/photobox/photos/102"
+                 src="https://webetu.iutnc.univ-lorraine.fr/www/canals5/photobox/img/small/img_586d38db67677.jpg">
+            <div>warren-falls-1935615_1920</div>
+        </div>
 
-              <div class="vignette" >
-                  <img
-                  data-img="https://webetu.iutnc.univ-lorraine.fr/www/canals5/photobox/img/large/img_586d38dc3123d.jpg"
-                  data-uri="https://webetu.iutnc.univ-lorraine.fr/www/canals5/photobox/photos/100"
-                  src="https://webetu.iutnc.univ-lorraine.fr/www/canals5/photobox/img/small/img_586d38dc3123d.jpg">
-                  <div>water-lily-1893220_1920</div>
+        <div class="vignette">
+            <img data-img="https://webetu.iutnc.univ-lorraine.fr/www/canals5/photobox/img/large/img_586d38db0444d.jpg"
+                 data-uri="https://webetu.iutnc.univ-lorraine.fr/www/canals5/photobox/photos/103"
+                 src="https://webetu.iutnc.univ-lorraine.fr/www/canals5/photobox/img/small/img_586d38db0444d.jpg">
+            <div>roe-deer-1931979_1920</div>
+        </div>
 
-              </div>
-
-              <div class="vignette" >
-                  <img data-img="https://webetu.iutnc.univ-lorraine.fr/www/canals5/photobox/img/large/img_586d38dbc84ac.jpg"
-                   data-uri="https://webetu.iutnc.univ-lorraine.fr/www/canals5/photobox/photos/101"
-                   src="https://webetu.iutnc.univ-lorraine.fr/www/canals5/photobox/img/small/img_586d38dbc84ac.jpg">
-                  <div>water-1910237_1920</div>
-              </div>
-
-              <div class="vignette">
-                  <img data-img="https://webetu.iutnc.univ-lorraine.fr/www/canals5/photobox/img/large/img_586d38db67677.jpg"
-                  data-uri="https://webetu.iutnc.univ-lorraine.fr/www/canals5/photobox/photos/102"
-                  src="https://webetu.iutnc.univ-lorraine.fr/www/canals5/photobox/img/small/img_586d38db67677.jpg">
-                  <div>warren-falls-1935615_1920</div>
-             </div>
-
-             <div class="vignette">
-                  <img data-img="https://webetu.iutnc.univ-lorraine.fr/www/canals5/photobox/img/large/img_586d38db0444d.jpg"
-                  data-uri="https://webetu.iutnc.univ-lorraine.fr/www/canals5/photobox/photos/103"
-                  src="https://webetu.iutnc.univ-lorraine.fr/www/canals5/photobox/img/small/img_586d38db0444d.jpg">
-                  <div>roe-deer-1931979_1920</div>
-             </div>
-
-             <div class="vignette">
-                  <img data-img="https://webetu.iutnc.univ-lorraine.fr/www/canals5/photobox/img/large/img_586d38daa09e8.jpg"
-                  data-uri="https://webetu.iutnc.univ-lorraine.fr/www/canals5/photobox/photos/104"
-                  src="https://webetu.iutnc.univ-lorraine.fr/www/canals5/photobox/img/small/img_586d38daa09e8.jpg">
-                  <div>prairie-rattlesnake-1929345_1280</div>
-             </div>
-
-
-           </div>
+        <div class="vignette">
+            <img data-img="https://webetu.iutnc.univ-lorraine.fr/www/canals5/photobox/img/large/img_586d38daa09e8.jpg"
+                 data-uri="https://webetu.iutnc.univ-lorraine.fr/www/canals5/photobox/photos/104"
+                 src="https://webetu.iutnc.univ-lorraine.fr/www/canals5/photobox/img/small/img_586d38daa09e8.jpg">
+            <div>prairie-rattlesnake-1929345_1280</div>
+        </div>
+    </div>
 
 
     <!-- lightbox container should come here -->
@@ -84,22 +72,13 @@
     -->
 
 </main>
-
-
-
-
 <script
-			  src="https://code.jquery.com/jquery-3.3.1.min.js"
-			  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-			  crossorigin="anonymous"></script>
-
+        src="https://code.jquery.com/jquery-3.3.1.min.js"
+        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+        crossorigin="anonymous">
+</script>
 <script> window.jQuery || document.write('<script src="node_modules/jquery/dist/jquery.min.js"><\/script>') </script>
-
-<script src="node_modules/axios/dist/axios.min.js"></script>
-
-<script type="module" src="photobox.js"></script>
-
-
-
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+<script type="module" src="js/photobox.js"></script>
 </body>
 </html>
