--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
                     <h1>Photobox</h1>
                     <p class="lead text-muted">Sah quel plaisir d'utiliser Bootstrap 🙄.</p>
                     <p>
-                        <button class="btn btn-primary my-2"><i class="fas fa-backward"></i></button>
+                        <button class="btn btn-primary my-2" id="prev" disabled><i class="fas fa-backward"></i></button>
                         <button class="btn btn-secondary my-2" id="load">Charger</button>
-                        <button class="btn btn-primary my-2"><i class="fas fa-forward"></i></button>
+                        <button class="btn btn-primary my-2" id="next" disabled><i class="fas fa-forward"></i></button>
                     </p>
                 </div>
             </section>
